# eau

./: .gitignore  Cargo.toml  Dockerfile  README.md
src/: config.rs  entities.rs  main.rs  utils.rs
src/ai/: huggingface.rs  local_hf.rs  mod.rs
src/auth/: jwt.rs  mod.rs
src/bot/: handlers.rs  mod.rs
src/database/: mod.rs  speedb.rs
src/database/queries/: search.sql  up.sql
src/http/: handlers.rs  mod.rs
