[package]
name = "eau"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
serde = { version = "1.0.196", features = ["derive"] }
surrealdb = { version = "1.1.1", features = ["kv-speedb"] }
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.11", features = ["json"] }
telegram-bot = {git = "https://github.com/telegram-rs/telegram-bot"}
futures = "0.3.30"
toml = "0.8.10"

